<?xml version="1.0"?>
<package>
  <name>move_confined</name>
  <version>0.3.0</version>
  <description>The move_confined package</description>
  <maintainer email="michael.benz@canonical.com">ubuntu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>create_node</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <run_depend>create_node</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kobuki_msgs</run_depend>
  <run_depend>turtlebot_bringup</run_depend>

  <run_depend>rocon_app_manager</run_depend>
  <run_depend>kobuki_capabilities</run_depend>
</package>
